@@ -5,6 +5,9 @@
 	  clients and force them to 80x24.
 	* Pass window size to watchers via inprogress file; show it on the
 	  list.
+	* Selecting a game to watch with an uppercase letter attempts to
+	  change the window size to the game's via the \033[8;<r>;<c>t
+	  sequence.
 
 1.4.3 (2004/02/28)
 	* Make ttyplay use the 'strip' value it remembered from last view.
